# gips

./: Cargo.toml  LICENSE-MIT  README.md
.devcontainer/: devcontainer.json
examples/: ipc.rs  poll.rs  shm.rs
src/: errno.rs  ipc.rs  lib.rs  mach.rs  poll.rs  seqpacket.rs  shm.rs  windows.rs
src/ipc/: linux.rs  macos.rs  windows.rs
src/poll/: linux.rs  macos.rs  windows.rs
src/seqpacket/: listener.rs  socket.rs
src/shm/: mach.rs  posix.rs  windows.rs
src/windows/: file.rs  handle.rs  overlapped.rs  pipe.rs
tests/: ipc.rs  poll.rs  shm.rs
