[package]
name = "gips"
description = "General inter-process solution"
version = "0.1.0"

edition = "2024"
authors = ["GIPS Contributors"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/funelk/gips"

[features]
default = ["tracing"]
verbose = []

[dependencies]
cfg-if = "1.0.1"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
log = { version = "0.4.20", features = ["std"], optional = true}
serde = { version = "1.0.189", features = ["derive"] }
socket2 = { version = "0.6.1", features = ["all"] }
thiserror = "2.0.17"
tracing = { version = "0.1.41", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.149"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62.2"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_Memory",
  "Win32_Storage_FileSystem",
  "Win32_System_Pipes",
  "Win32_System_IO",
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
]

[dev-dependencies]
env_logger = "0.11.8"
tracing-subscriber = "0.3.22"
